# mos-hardware-template

./: .devcontainer.json  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
