[package]
name = "print10"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2
lto = true
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
debug = 2

[dependencies]
# here you better pin the mos-hardware version to use
mos-hardware = {git = "https://github.com/mlund/mos-hardware", branch = "main"}
mos-alloc = "0.2"
ufmt-stdio = "0"
rand = {version = "0.8.5", default-features = false}
